<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount:</string>
    <string name="pax">Number of Pax:</string>
    <string name="svs">NO SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="hint">$$</string>
    <string name="hint2">00</string>
    <string name="hint3">0</string>









</resources>